base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msb-argo-test
  labels:
    app: msb-argo-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msb-argo-test
  template:
    metadata:
      labels:
        app: msb-argo-test
    spec:
      containers:
        - name: msb-argo-test
          image: nginxinc/nginx-unprivileged:1.25
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
